--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div id="lead">
         <div id="lead-content">
             <h1>Nathan Lannon</h1>
-            <h2>Programmer</h2>
+            <h2>Software Developer</h2>
         </div>
     </div>
     
