Update education, Add SCP portfolio entry

--- a/index.html
+++ b/index.html
@@ -49,33 +49,16 @@
         </ul>
     </div>
 
-    <!-- <div id="experience" class="background-alt">
-        <h2 class="heading">Experience</h2>
-        <div id="experience-timeline">
-            <div data-date="2021 – Present" class="fadescroll">
-                <h3>StellarDev LLC</h3>
-                <h4>Spigot Plugin Developer</h4>
-                <p>
-		    Currently working as a General Contractor for <a href="https://stellardev.org/">StellarDev</a>, I am usually doing commissions for plugins and resource packs.
-                </p>
-            </div>
-            <div data-date="2018 – 2021" class="fadescroll">
-                <h3>Tamewater Servers</h3>
-                <h4>Division Leader</h4>
-                <p>
-		    I worked with Tamewater to create their Towny and Prison servers. My main focus was setting ourselves apart by creating custom content and creating RPG aspects.
-                </p>
-            </div>
-        </div>
-    </div>
-
-    <div class="spacer lightdark"></div> -->
-
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block fadescroll">
+            <h3>Community College of Rhode Island</h3>
+            <span class="education-date">2022 - Present</span>
+            <h4>Associate Degree in Computer Programming</h4>
+        </div>
+        <div class="education-block fadescroll">
             <h3>Burrillville High School</h3>
-            <span class="education-date">2020 - Present</span>
+            <span class="education-date">2018 - 2022</span>
             <h4>Computer Science - Javascript, Java, Python</h4>
         </div>
     </div>
