--- a/index.html
+++ b/index.html
@@ -5,16 +5,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="keywords" content="deno, d3nosaur, deno.work">
 	<meta name="language" content="en">
-	<meta name="robots" content="INDEX,FOLLOW">
-	<meta name="author" content="Conna Wiles">
     <title>Nathan's Portfolio</title>
 	<link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 	<link rel="icon" href="favicon.png" type="image/x-icon">
+
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link href="css/styles.css" rel="stylesheet">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="https://kit.fontawesome.com/d195343b2e.js" crossorigin="anonymous"></script>
@@ -34,9 +33,8 @@
             <li>Python</li>
             <li>Javascript</li>
             <li>Lua</li>
-            <li>Photoshop</li>
+            <li>C/C++</li>
             <li>Blender</li>
-            <li>Substance Painter</li>
             <li>MySQL</li>
             <li>SQLite</li>
             <li>Redis</li>
@@ -44,22 +42,46 @@
             <li>Git</li>
             <li>HTML</li>
             <li>CSS</li>
+            <li>GLSL</li>
+            <li>OpenGL</li>
             <li>JQuery</li>
             <li>Maven</li>
         </ul>
     </div>
+
+    <div id="experience" class="background-alt">
+        <h2 class="heading">Experience</h2>
+        <div id="experience-timeline">
+            <div data-date="November 2022 - May 2023" class="fadescroll">
+                <h3>NOAA Ocean Exploration Cooperative Institute</h3>
+                <h4>Software Engineering Intern</h4>
+                <p>
+		    Student Intern in <a href="https://web.uri.edu/oeci/">OECI</a>'s Bridge to Ocean Exploration program.<br>
+            I am one of the three members of the communications team. Our goal is to improve the public appearance of OECI.<br>
+            This program is unique in that it does not give us strict projects to complete. Half of the role is deciding what aspects need to be improved, present our findings to our mentors, and then we can work on making adjustments.<br>
+            I have decided to prioritize improving the website by creating new interactive features. I noticed it was pretty bland so I am currently working to implement an expedition map, interactive graphs, and a 3D model viewer.
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="spacer lightdark"></div>
 
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block fadescroll">
             <h3>Community College of Rhode Island</h3>
             <span class="education-date">2022 - Present</span>
-            <h4>Associate Degree in Computer Programming</h4>
-        </div>
-        <div class="education-block fadescroll">
-            <h3>Burrillville High School</h3>
-            <span class="education-date">2018 - 2022</span>
-            <h4>Computer Science - Javascript, Java, Python</h4>
+            <h4>Associates Degree in Computer Programming</h4>
+            <ul>
+                <li>Intro to Computers: A</li>
+                <li>Programming Concepts: A</li>
+                <li>Programming in C#: WIP</li>
+                <li>Object Oriented Programming: WIP</li>
+                <li>Linux Networking: WIP</li>
+                <li>Calculus 1: A-</li>
+                <li>Calculus 2: WIP</li>
+            </ul>
         </div>
     </div>
 
@@ -70,6 +92,9 @@
     <footer>
         <div class="social">
             <ul>
+                <li>
+                    <a href="https://github.com/nlannon27" target="_blank"><i class="fa fa-github" aria-hidden="true"></i> – nlannon27</a>
+                </li>
                 <li>
                     <a href="mailto:nathanlannon27@gmail.com" target="_blank"><i class="fas fa-envelope" aria-hidden="true"></i> – nathanlannon27@gmail.com</a>
                 </li>
