--- a/index.html
+++ b/index.html
@@ -70,17 +70,15 @@
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block fadescroll">
-            <h3>Community College of Rhode Island</h3>
-            <span class="education-date">2022 - Present</span>
-            <h4>Associates Degree in Computer Programming</h4>
+            <h3>Rhode Island Joint Admissions Agreement</h3>
+            <span class="education-date">May, 2026</span>
+            <h4>BS in Computer Science</h4>
             <ul>
                 <li>Intro to Computers: A</li>
                 <li>Programming Concepts: A</li>
-                <li>Programming in C#: WIP</li>
-                <li>Object Oriented Programming: WIP</li>
-                <li>Linux Networking: WIP</li>
                 <li>Calculus 1: A-</li>
-                <li>Calculus 2: WIP</li>
+                <li>University of Rhode Island</li>
+		<li>Community College of Rhode Island</li>
             </ul>
         </div>
     </div>
