--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div id="lead">
         <div id="lead-content">
             <h1>Nathan Lannon</h1>
-            <h2>Software Developer</h2>
+            <h2>Software Engineer</h2>
         </div>
     </div>
     
@@ -52,15 +52,31 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
+            <div data-date="June 2023 - August 2023" class="fadescroll">
+                <h3>ThayerMahan</h3>
+                <h4>AI Systems Intern</h4>
+                <p>
+                </p>
+            </div>
+            <div data-date="June 2023 - August 2023" class="fadescroll">
+                <h3>NOAA Ocean Exploration Cooperative Institute</h3>
+                <h4>Machine Learning Intern</h4>
+                <ul>
+                    <li>Collaborated with graduate students from URI to create Rovia, a cutting-edge deep sea video analyzer</li>
+                    <li>Leveraged Python Multiprocessing to improve video read speeds, resulting in up to 16 times faster performance</li>
+                    <li>Designed a system for extracting highlight clips from underwater unmanned vehicle video feeds</li>
+                </ul>
+            </div>
             <div data-date="November 2022 - May 2023" class="fadescroll">
                 <h3>NOAA Ocean Exploration Cooperative Institute</h3>
-                <h4>Software Engineering Intern</h4>
-                <p>
-		    Student Intern in <a href="https://web.uri.edu/oeci/">OECI</a>'s Bridge to Ocean Exploration program.<br>
-            I am one of the three members of the communications team. Our goal is to improve the public appearance of OECI.<br>
-            This program is unique in that it does not give us strict projects to complete. Half of the role is deciding what aspects need to be improved, present our findings to our mentors, and then we can work on making adjustments.<br>
-            I have decided to prioritize improving the website by creating new interactive features. I noticed it was pretty bland so I am currently working to implement an expedition map, interactive graphs, and a 3D model viewer.
-                </p>
+                <h4>Bridge to Ocean Exploration Intern</h4>
+                <p>Student Intern in <a href="https://web.uri.edu/oeci/">OECI</a>'s Bridge to Ocean Exploration program.</p>
+                <ul>
+                    <li>Developed an interactive world map on their website, designed to showcase OECI's projects</li>
+                    <li>Created a WordPress plugin that retrieves data from Google Sheets and dynamically presents it on the website</li>
+                    <li>Presented progress updates and final summaries to the directors at OECI and nearby colleges.</li>
+                </ul>
+               </p>
             </div>
         </div>
     </div>
@@ -74,11 +90,9 @@
             <span class="education-date">May, 2026</span>
             <h4>BS in Computer Science</h4>
             <ul>
-                <li>Intro to Computers: A</li>
-                <li>Programming Concepts: A</li>
-                <li>Calculus 1: A-</li>
+                <li>3.76 / 4.0 GPA</li>
                 <li>University of Rhode Island</li>
-		<li>Community College of Rhode Island</li>
+		        <li>Community College of Rhode Island</li>
             </ul>
         </div>
     </div>
