--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
                 <h3>ThayerMahan</h3>
                 <h4>AI Systems Intern</h4>
                 <p>
+                    <li>Developed semi-autonomous deep-sea surveillance drones to facilitate early detection of potential threats, significantly improving maritime security</li>
+                    <li>Implemented AI systems to enable a single operator to efficiently manage multiple drones simultaneously</li>
                 </p>
             </div>
             <div data-date="June 2023 - August 2023" class="fadescroll">
@@ -63,7 +65,7 @@
                 <h4>Machine Learning Intern</h4>
                 <ul>
                     <li>Collaborated with graduate students from URI to create Rovia, a cutting-edge deep sea video analyzer</li>
-                    <li>Leveraged Python Multiprocessing to improve video read speeds, resulting in up to 16 times faster performance</li>
+                    <li>Utilized Python multiprocessing pools to decrease video processing times by 80%</li>
                     <li>Designed a system for extracting highlight clips from underwater unmanned vehicle video feeds</li>
                 </ul>
             </div>
@@ -73,7 +75,9 @@
                 <p>Student Intern in <a href="https://web.uri.edu/oeci/">OECI</a>'s Bridge to Ocean Exploration program.</p>
                 <ul>
                     <li>Developed an interactive world map on their website, designed to showcase OECI's projects</li>
-                    <li>Created a WordPress plugin that retrieves data from Google Sheets and dynamically presents it on the website</li>
+                    <li>Created URI Dynamic Metrics - an open-source WordPress plugin that displays data from Google Sheets
+                        <li>This was initially just for OECI but was later adopted into the University of Rhode Island’s website infrastructure</li>
+                    </li>
                     <li>Presented progress updates and final summaries to the directors at OECI and nearby colleges.</li>
                 </ul>
                </p>
