--- a/index.html
+++ b/index.html
@@ -76,9 +76,10 @@
                 <ul>
                     <li>Developed an interactive world map on their website, designed to showcase OECI's projects</li>
                     <li>Created URI Dynamic Metrics - an open-source WordPress plugin that displays data from Google Sheets
-                        <li>This was initially just for OECI but was later adopted into the University of Rhode Island’s website infrastructure</li>
+                        <ol style="list-style-type: lower-alpha; padding-bottom: 0;">
+                            <li style="margin-left:2em">This was initially just for OECI but was later adopted into the University of Rhode Island’s website infrastructure</li>
+                        </ol>
                     </li>
-                    <li>Presented progress updates and final summaries to the directors at OECI and nearby colleges.</li>
                 </ul>
                </p>
             </div>
