--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <li>OpenGL</li>
             <li>JQuery</li>
             <li>Maven</li>
+            <li>Unreal Engine</li>
         </ul>
     </div>
 
@@ -54,15 +55,16 @@
         <div id="experience-timeline">
             <div data-date="June 2023 - August 2023" class="fadescroll">
                 <h3>ThayerMahan</h3>
-                <h4>AI Systems Intern</h4>
+                <h4>Simulation Intern - C++, Unreal Engine</h4>
                 <p>
-                    <li>Developed semi-autonomous deep-sea surveillance drones to facilitate early detection of potential threats, significantly improving maritime security</li>
-                    <li>Implemented AI systems to enable a single operator to efficiently manage multiple drones simultaneously</li>
+                    <li>Worked with NAVAIR to develop Fortifly.TRAIN, a naval pilot training simulator</li>
+                    <li>Reduced cognitive burden on pilots by replacing costly mental processes with AI systems</li>
+                    <li style="margin-left:2em">Utilized eye-tracking hardware with DoD cognitive analysis to determine what processes were costly</li>
                 </p>
             </div>
             <div data-date="June 2023 - August 2023" class="fadescroll">
                 <h3>NOAA Ocean Exploration Cooperative Institute</h3>
-                <h4>Machine Learning Intern</h4>
+                <h4>Machine Learning Intern - Python, Keras</h4>
                 <ul>
                     <li>Collaborated with graduate students from URI to create Rovia, a cutting-edge deep sea video analyzer</li>
                     <li>Utilized Python multiprocessing pools to decrease video processing times by 80%</li>
@@ -71,15 +73,12 @@
             </div>
             <div data-date="November 2022 - May 2023" class="fadescroll">
                 <h3>NOAA Ocean Exploration Cooperative Institute</h3>
-                <h4>Bridge to Ocean Exploration Intern</h4>
+                <h4>Bridge to Ocean Exploration Intern - WordPress, PHP, JavaScript</h4>
                 <p>Student Intern in <a href="https://web.uri.edu/oeci/">OECI</a>'s Bridge to Ocean Exploration program.</p>
                 <ul>
                     <li>Developed an interactive world map on their website, designed to showcase OECI's projects</li>
-                    <li>Created URI Dynamic Metrics - an open-source WordPress plugin that displays data from Google Sheets
-                        <ol style="list-style-type: lower-alpha; padding-bottom: 0;">
-                            <li style="margin-left:2em">This was initially just for OECI but was later adopted into the University of Rhode Island’s website infrastructure</li>
-                        </ol>
-                    </li>
+                    <li>Created URI Dynamic Metrics - an open-source WordPress plugin that displays data from Google Sheets</li>
+                    <li style="margin-left:2em">This was initially just for OECI but was later adopted into the University of Rhode Island’s website infrastructure</li>
                 </ul>
                </p>
             </div>
@@ -91,13 +90,21 @@
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block fadescroll">
-            <h3>Rhode Island Joint Admissions Agreement</h3>
-            <span class="education-date">May, 2026</span>
+            <h3>University of Rhode Island</h3>
+            <span class="education-date">Anticipated 2024-2026</span>
             <h4>BS in Computer Science</h4>
             <ul>
-                <li>3.76 / 4.0 GPA</li>
-                <li>University of Rhode Island</li>
-		        <li>Community College of Rhode Island</li>
+                <li>Pre-enrolled into the University of Rhode Island via the Rhode Island Joint Agreement Admissions program</li>
+                <li>Set up to seamlessly transfer to URI after completing two years at CCRI</li>
+            </ul>
+        </div>
+        <div class="education-block fadescroll">
+            <h3>Community College of Rhode Island</h3>
+            <span class="education-date">2022-2023</span>
+            <h4>AS in Computer Science</h4>
+            <ul>
+                <li>3.8 / 4.0 GPA</li>
+                <li>Deans List - Fall 2022, Spring 2023</li>
             </ul>
         </div>
     </div>
