--- a/index.html
+++ b/index.html
@@ -53,6 +53,15 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
+            <div data-date="August 2023 - Present" class="fadescroll">
+                <h3>NOAA Ocean Exploration Cooperative Institute</h3>
+                <h4>Machine Learning Intern - Python, Keras</h4>
+                <ul>
+                    <li>Collaborated with graduate students from URI to create Rovia, a cutting-edge deep sea video analyzer</li>
+                    <li>Utilized Python multiprocessing pools to decrease video processing times by 80%</li>
+                    <li>Designed a system for extracting highlight clips from underwater unmanned vehicle video feeds</li>
+                </ul>
+            </div>
             <div data-date="June 2023 - August 2023" class="fadescroll">
                 <h3>ThayerMahan</h3>
                 <h4>Simulation Intern - C++, Unreal Engine</h4>
@@ -61,15 +70,6 @@
                     <li>Reduced cognitive burden on pilots by replacing costly mental processes with AI systems</li>
                     <li style="margin-left:2em">Utilized eye-tracking hardware with DoD cognitive analysis to determine what processes were costly</li>
                 </p>
-            </div>
-            <div data-date="June 2023 - August 2023" class="fadescroll">
-                <h3>NOAA Ocean Exploration Cooperative Institute</h3>
-                <h4>Machine Learning Intern - Python, Keras</h4>
-                <ul>
-                    <li>Collaborated with graduate students from URI to create Rovia, a cutting-edge deep sea video analyzer</li>
-                    <li>Utilized Python multiprocessing pools to decrease video processing times by 80%</li>
-                    <li>Designed a system for extracting highlight clips from underwater unmanned vehicle video feeds</li>
-                </ul>
             </div>
             <div data-date="November 2022 - May 2023" class="fadescroll">
                 <h3>NOAA Ocean Exploration Cooperative Institute</h3>
@@ -90,20 +90,13 @@
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block fadescroll">
-            <h3>University of Rhode Island</h3>
+            <h3>Rhode Island Joint Admissions Agreement</h3>
             <span class="education-date">Anticipated 2024-2025</span>
             <h4>BS in Computer Science</h4>
             <ul>
-                <li>Pre-enrolled into the University of Rhode Island via the Rhode Island Joint Agreement Admissions program</li>
-            </ul>
-        </div>
-        <div class="education-block fadescroll">
-            <h3>Community College of Rhode Island</h3>
-            <span class="education-date">2022-2023</span>
-            <h4>AS in Computer Science</h4>
-            <ul>
+                <li>Dual enrolled at both the University of Rhode Island and Community College of Rhode Island</li>
                 <li>3.8 / 4.0 GPA</li>
-                <li>Deans List - Fall 2022, Spring 2023</li>
+                <li>CCRI - Deans List - Fall 2022, Spring 2023</li>
             </ul>
         </div>
     </div>
