--- a/index.html
+++ b/index.html
@@ -53,13 +53,12 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="August 2023 - Present" class="fadescroll">
+            <div data-date="September 2023 - Present" class="fadescroll">
                 <h3>NOAA Ocean Exploration Cooperative Institute</h3>
-                <h4>Machine Learning Intern - Python, Keras</h4>
+                <h4>Software Engineer Intern - Photogrammetry, Unreal Engine</h4>
                 <ul>
-                    <li>Collaborated with graduate students from URI to create Rovia, a cutting-edge deep sea video analyzer</li>
-                    <li>Utilized Python multiprocessing pools to decrease video processing times by 80%</li>
-                    <li>Designed a system for extracting highlight clips from underwater unmanned vehicle video feeds</li>
+                    <li>Contributed to the development of RUMI - Realtime Undersea Modeling and Immersion</li>
+                    <li style="margin-left:2em">This is a project that uses photogrammetry to convert seafloor footage into 3D environments</li>
                 </ul>
             </div>
             <div data-date="June 2023 - August 2023" class="fadescroll">
@@ -67,8 +66,7 @@
                 <h4>Simulation Intern - C++, Unreal Engine</h4>
                 <p>
                     <li>Worked with NAVAIR to develop Fortifly.TRAIN, a naval pilot training simulator</li>
-                    <li>Reduced cognitive burden on pilots by replacing costly mental processes with AI systems</li>
-                    <li style="margin-left:2em">Utilized eye-tracking hardware with DoD cognitive analysis to determine what processes were costly</li>
+                    <li>Overhauled the simulation by integrating dynamic vehicle routing and a new tutorial segment</li>
                 </p>
             </div>
             <div data-date="November 2022 - May 2023" class="fadescroll">
@@ -76,9 +74,9 @@
                 <h4>Bridge to Ocean Exploration Intern - WordPress, PHP, JavaScript</h4>
                 <p>Student Intern in <a href="https://web.uri.edu/oeci/">OECI</a>'s Bridge to Ocean Exploration program.</p>
                 <ul>
-                    <li>Developed an interactive world map on their website, designed to showcase OECI's projects</li>
-                    <li>Created URI Dynamic Metrics - an open-source WordPress plugin that displays data from Google Sheets</li>
-                    <li style="margin-left:2em">This was initially just for OECI but was later adopted into the University of Rhode Island’s website infrastructure</li>
+                    <li>Worked with other students to develop the open-source projects Rovia and URI Dynamic Metrics</li>
+                    <li style="margin-left:2em">Rovia is a video analyzer that extracts highlight clips from deep-sea ROV footage</li>
+                    <li style="margin-left:2em">URI Dynamic Metrics is a WordPress plugin that displays animated metric data from Google Sheets</li>
                 </ul>
                </p>
             </div>
@@ -104,6 +102,8 @@
     <div class="spacer darklight"></div>
     
     <script src="js/portfolio_interpreter.js"></script>
+
+    <div class="spacer lightdark"></div>
 
     <footer>
         <div class="social">
