temporarily remove section till i can fill it in more

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div id="lead">
         <div id="lead-content">
             <h1>Nathan Lannon</h1>
-            <h2>Software Engineer</h2>
+            <h2>Computer Programming</h2>
         </div>
     </div>
     
@@ -53,14 +53,14 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2023 - Present" class="fadescroll">
+            <!--<div data-date="September 2023 - Present" class="fadescroll">
                 <h3>NOAA Ocean Exploration Cooperative Institute</h3>
                 <h4>Software Engineer Intern - Photogrammetry, Unreal Engine</h4>
                 <ul>
                     <li>Contributed to the development of RUMI - Realtime Undersea Modeling and Immersion</li>
                     <li style="margin-left:2em">This is a project that uses photogrammetry to convert seafloor footage into 3D environments</li>
                 </ul>
-            </div>
+            </div>-->
             <div data-date="June 2023 - August 2023" class="fadescroll">
                 <h3>ThayerMahan</h3>
                 <h4>Simulation Intern - C++, Unreal Engine</h4>
