--- a/index.html
+++ b/index.html
@@ -53,14 +53,15 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <!--<div data-date="September 2023 - Present" class="fadescroll">
-                <h3>NOAA Ocean Exploration Cooperative Institute</h3>
-                <h4>Software Engineer Intern - Photogrammetry, Unreal Engine</h4>
+            <div data-date="September 2023 - May 2024" class="fadescroll">
+                <h3>Ocean Exploration Trust - NOAA OECI</h3>
+                <h4>Software Engineer Intern - Unreal Engine, Photogrammetry </h4>
                 <ul>
-                    <li>Contributed to the development of RUMI - Realtime Undersea Modeling and Immersion</li>
-                    <li style="margin-left:2em">This is a project that uses photogrammetry to convert seafloor footage into 3D environments</li>
+                    <li>Developed a photogrammetry pipeline to turn footage of underwater monuments into 3D environments</li>
+                    <li>Imported these 3D environments into Unreal Engine with georeferencing to replicate their position on a globe</li>
+                    <li>Currently working on a game that incorporates these 3D environments and allows players to explore them</li>
                 </ul>
-            </div>-->
+            </div>
             <div data-date="June 2023 - August 2023" class="fadescroll">
                 <h3>ThayerMahan</h3>
                 <h4>Simulation Intern - C++, Unreal Engine</h4>
@@ -89,12 +90,11 @@
         <h2 class="heading">Education</h2>
         <div class="education-block fadescroll">
             <h3>Rhode Island Joint Admissions Agreement</h3>
-            <span class="education-date">Anticipated 2024-2025</span>
             <h4>BS in Computer Science</h4>
             <ul>
                 <li>Dual enrolled at both the University of Rhode Island and Community College of Rhode Island</li>
                 <li>3.8 / 4.0 GPA</li>
-                <li>CCRI - Deans List - Fall 2022, Spring 2023</li>
+                <li>Deans List - Fall 2022, Spring 2023</li>
             </ul>
         </div>
     </div>
