--- a/index.html
+++ b/index.html
@@ -57,27 +57,26 @@
                 <h3>Ocean Exploration Trust - NOAA OECI</h3>
                 <h4>Software Engineer Intern - Unreal Engine, Photogrammetry </h4>
                 <ul>
-                    <li>Developed a photogrammetry pipeline to turn footage of underwater monuments into 3D environments</li>
-                    <li>Imported these 3D environments into Unreal Engine with georeferencing to replicate their position on a globe</li>
-                    <li>Currently working on a game that incorporates these 3D environments and allows players to explore them</li>
+                    <li>Developed a photogrammetry pipeline to turn footage of underwater monuments into 3D environments.</li>
+                    <li>Constructed a digital experience in Unreal Engine that replicates real-life dives from the ROV Hercules.</li>
+                    <li style="margin-left:2em">Integrated Cesium into this project to ensure accurate geopositioning and scaling.</li>
                 </ul>
             </div>
             <div data-date="June 2023 - August 2023" class="fadescroll">
                 <h3>ThayerMahan</h3>
                 <h4>Simulation Intern - C++, Unreal Engine</h4>
-                <p>
-                    <li>Worked with NAVAIR to develop Fortifly.TRAIN, a naval pilot training simulator</li>
-                    <li>Overhauled the simulation by integrating dynamic vehicle routing and a new tutorial segment</li>
-                </p>
+                <ul>
+                    <li>Worked with NAVAIR to develop Fortifly.TRAIN, a naval pilot training simulator.</li>
+                    <li>Overhauled the simulation by creating dynamic vehicle routing and a new tutorial segment.</li>
+                    <li style="margin-left:2em">Dynamic vehicle routing is a roadway system with common road features such as stop signs and traffic lights along with smarter NPC drivers. The drivers can be specialized allowing some that prioritize highways and others that avoid other actors.</li>
+                </ul>
             </div>
             <div data-date="November 2022 - May 2023" class="fadescroll">
                 <h3>NOAA Ocean Exploration Cooperative Institute</h3>
-                <h4>Bridge to Ocean Exploration Intern - WordPress, PHP, JavaScript</h4>
-                <p>Student Intern in <a href="https://web.uri.edu/oeci/">OECI</a>'s Bridge to Ocean Exploration program.</p>
+                <h4>Bridge to Ocean Exploration Intern - Python, Keras, PHP, JavaScript</h4>
                 <ul>
-                    <li>Worked with other students to develop the open-source projects Rovia and URI Dynamic Metrics</li>
-                    <li style="margin-left:2em">Rovia is a video analyzer that extracts highlight clips from deep-sea ROV footage</li>
-                    <li style="margin-left:2em">URI Dynamic Metrics is a WordPress plugin that displays animated metric data from Google Sheets</li>
+                    <li>Collaborated with students to develop Rovia, a tool that extracts highlight clips from deep-sea ROV footage.</li>
+                    <li>Created URI Dynamic Metrics, a WordPress plugin that displays animated metric data from Google Sheets.</li>
                 </ul>
                </p>
             </div>
@@ -89,11 +88,16 @@
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block fadescroll">
-            <h3>Rhode Island Joint Admissions Agreement</h3>
-            <h4>BS in Computer Science</h4>
+            <h3>University of Rhode Island</h3>
+            <h4>B.S. in Computer Science - Spring 2026</h4>
             <ul>
-                <li>Dual enrolled at both the University of Rhode Island and Community College of Rhode Island</li>
-                <li>3.8 / 4.0 GPA</li>
+                <li>4.0 / 4.0 GPA</li>
+            </ul>
+        </div>
+        <div class="education-block fadescroll">
+            <h3>Community College of Rhode Island</h3>
+            <h4>Computer Science (BS-JURI) - Spring 2024</h4>
+            <ul>
                 <li>Deans List - Fall 2022, Spring 2023</li>
             </ul>
         </div>
