--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
             <div data-date="November 2022 - May 2023" class="fadescroll">
                 <h3>NOAA Ocean Exploration Cooperative Institute</h3>
-                <h4>Bridge to Ocean Exploration Intern - Python, Keras, PHP, JavaScript</h4>
+                <h4>Software Engineer Intern - Python, Keras, PHP, JavaScript</h4>
                 <ul>
                     <li>Collaborated with students to develop Rovia, a tool that extracts highlight clips from deep-sea ROV footage.</li>
                     <li>Created URI Dynamic Metrics, a WordPress plugin that displays animated metric data from Google Sheets.</li>
