--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <script src="https://kit.fontawesome.com/d195343b2e.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/bdb602f052.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -117,6 +117,9 @@
                 </li>
                 <li>
                     <a href="mailto:nathanlannon27@gmail.com" target="_blank"><i class="fas fa-envelope" aria-hidden="true"></i> – nathanlannon27@gmail.com</a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/nathanlannon/" target="_blank"><i class="fa-brands fa-linkedin" aria-hidden="true"></i> – Nathan Lannon</a>
                 </li>
             </ul>
         </div>
