--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
     <div id="lead">
         <div id="lead-content">
             <h1>Nathan Lannon</h1>
-            <h2>Computer Programming</h2>
         </div>
     </div>
     
@@ -32,8 +31,9 @@
             <li>Java</li>
             <li>Python</li>
             <li>Javascript</li>
+            <li>C#</li>
+            <li>C++</li>
             <li>Lua</li>
-            <li>C/C++</li>
             <li>Blender</li>
             <li>MySQL</li>
             <li>SQLite</li>
@@ -53,30 +53,40 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
+            <div data-date="June 2024 - August 2024" class="fadescroll">
+                <h3>HF Designworks - FortiFly - ThayerMahan</h3>
+                <h4>Software Engineer Intern - C#, Python</h4>
+                <ul>
+                    <li>Worked on a system to measure cognitive workload of a pilot when using simulator technology</li>
+                    <li style="margin-left:2em">This workload was calculated using a combination of heart rate, eye-tracking, haptic feedback, and speech data.</li>
+                    <li>Developed a program to record screenspace eye positioning and display it as a heatmap to better track what processes were mentally taxing.</li>
+                </ul>
+            </div>
             <div data-date="September 2023 - May 2024" class="fadescroll">
                 <h3>Ocean Exploration Trust - NOAA OECI</h3>
-                <h4>Software Engineer Intern - Unreal Engine, Photogrammetry </h4>
+                <h4>Software Engineer Intern - Python, C++</h4>
                 <ul>
-                    <li>Developed a photogrammetry pipeline to turn footage of underwater monuments into 3D environments.</li>
-                    <li>Constructed a digital experience in Unreal Engine that replicates real-life dives from the ROV Hercules.</li>
-                    <li style="margin-left:2em">Integrated Cesium into this project to ensure accurate geopositioning and scaling.</li>
+                    <li>Developer on the Realtime Underwater Modeling and Immersion project focused on photogrammetry and simulation.</li>
+                    <li style="margin-left:2em">This project was featured in a talk at SIGGRAPH 2024 for its unique combination of underutilized domains.</li>
+                    <li>Challenged with designing and delivering a product suitable for use at sea, in a classroom, or in a laboratory.</li>
                 </ul>
             </div>
             <div data-date="June 2023 - August 2023" class="fadescroll">
                 <h3>ThayerMahan</h3>
                 <h4>Simulation Intern - C++, Unreal Engine</h4>
                 <ul>
-                    <li>Worked with NAVAIR to develop Fortifly.TRAIN, a naval pilot training simulator.</li>
-                    <li>Overhauled the simulation by creating dynamic vehicle routing and a new tutorial segment.</li>
-                    <li style="margin-left:2em">Dynamic vehicle routing is a roadway system with common road features such as stop signs and traffic lights along with smarter NPC drivers. The drivers can be specialized allowing some that prioritize highways and others that avoid other actors.</li>
+                    <li>Collaborated with NAVAIR and FortiFly on a pilot simulator that teaches how to use AI assistants.</li>
+                    <li>Improved the simulator by implementing dynamic routing using the A* algorithm, simulating real-world traffic.</li>
                 </ul>
             </div>
             <div data-date="November 2022 - May 2023" class="fadescroll">
                 <h3>NOAA Ocean Exploration Cooperative Institute</h3>
                 <h4>Software Engineer Intern - Python, Keras, PHP, JavaScript</h4>
                 <ul>
-                    <li>Collaborated with students to develop Rovia, a tool that extracts highlight clips from deep-sea ROV footage.</li>
+                    <li>Assisted the research and development of ROVIA, an AI tool for extracting highlights from deep-sea video.</li>
+                    <li style="margin-left:2em">Implemented parallel computing to improve efficiency at sea, resulting in an 80% time improvement.</li>
                     <li>Created URI Dynamic Metrics, a WordPress plugin that displays animated metric data from Google Sheets.</li>
+                    <li style="margin-left:2em">This project was originally just for OECI but was later adopted into the University of Rhode Island's websites.</li>
                 </ul>
                </p>
             </div>
@@ -89,17 +99,14 @@
         <h2 class="heading">Education</h2>
         <div class="education-block fadescroll">
             <h3>University of Rhode Island</h3>
-            <h4>B.S. in Computer Science - Spring 2026</h4>
-            <ul>
-                <li>4.0 / 4.0 GPA</li>
-            </ul>
+            <h4>Computer Science BS - Spring 2026</h4>
         </div>
         <div class="education-block fadescroll">
             <h3>Community College of Rhode Island</h3>
-            <h4>Computer Science (BS-JURI) - Spring 2024</h4>
-            <ul>
+            <h4>Computer Science AS - Joint Admissions - Spring 2024</h4>
+            <!--<ul>
                 <li>Deans List - Fall 2022, Spring 2023</li>
-            </ul>
+            </ul>-->
         </div>
     </div>
 
