--- a/index.html
+++ b/index.html
@@ -51,64 +51,90 @@
     </div>
 
     <div id="experience" class="background-alt">
-        <h2 class="heading">Experience</h2>
-        <div id="experience-timeline">
-            <div data-date="June 2024 - August 2024" class="fadescroll">
-                <h3>HF Designworks - FortiFly - ThayerMahan</h3>
-                <h4>Software Engineer Intern - C#, Python</h4>
-                <ul>
-                    <li>Worked on a system to measure cognitive workload of a pilot when using simulator technology</li>
-                    <li style="margin-left:2em">This workload was calculated using a combination of heart rate, eye-tracking, haptic feedback, and speech data.</li>
-                    <li>Developed a program to record screenspace eye positioning and display it as a heatmap to better track what processes were mentally taxing.</li>
-                </ul>
-            </div>
-            <div data-date="September 2023 - May 2024" class="fadescroll">
-                <h3>Ocean Exploration Trust - NOAA OECI</h3>
-                <h4>Software Engineer Intern - Python, C++</h4>
-                <ul>
-                    <li>Developer on the Realtime Underwater Modeling and Immersion project focused on photogrammetry and simulation.</li>
-                    <li style="margin-left:2em">This project was featured in a talk at SIGGRAPH 2024 for its unique combination of underutilized domains.</li>
-                    <li>Challenged with designing and delivering a product suitable for use at sea, in a classroom, or in a laboratory.</li>
-                </ul>
-            </div>
-            <div data-date="June 2023 - August 2023" class="fadescroll">
-                <h3>ThayerMahan</h3>
-                <h4>Simulation Intern - C++, Unreal Engine</h4>
-                <ul>
-                    <li>Collaborated with NAVAIR and FortiFly on a pilot simulator that teaches how to use AI assistants.</li>
-                    <li>Improved the simulator by implementing dynamic routing using the A* algorithm, simulating real-world traffic.</li>
-                </ul>
-            </div>
-            <div data-date="November 2022 - May 2023" class="fadescroll">
-                <h3>NOAA Ocean Exploration Cooperative Institute</h3>
-                <h4>Software Engineer Intern - Python, Keras, PHP, JavaScript</h4>
-                <ul>
-                    <li>Assisted the research and development of ROVIA, an AI tool for extracting highlights from deep-sea video.</li>
-                    <li style="margin-left:2em">Implemented parallel computing to improve efficiency at sea, resulting in an 80% time improvement.</li>
-                    <li>Created URI Dynamic Metrics, a WordPress plugin that displays animated metric data from Google Sheets.</li>
-                    <li style="margin-left:2em">This project was originally just for OECI but was later adopted into the University of Rhode Island's websites.</li>
-                </ul>
-               </p>
-            </div>
-        </div>
-    </div>
+	  <h2 class="heading">Experience</h2>
+	  <div id="experience-timeline">
+	
+	    <div data-date="May 2025 - August 2025" class="fadescroll">
+	      <h3>Sony Interactive Entertainment - PlayStation</h3>
+	      <h4>Software Engineer Intern</h4>
+	      <ul>
+	        <li>Upcoming internship on the Core Engineering Team, focusing on advanced streaming systems for high-performance, low-latency game experiences.</li>
+	        <li style="margin-left:2em">Will be working across client and server systems to improve PlayStation's next-gen cloud gaming platform.</li>
+	      </ul>
+	    </div>
+	
+	    <div data-date="September 2024 - Present" class="fadescroll">
+	      <h3>Ocean Exploration Trust</h3>
+	      <h4>Software Engineer Contractor - C++, Python, Unreal Engine</h4>
+	      <ul>
+	        <li>Led development of a real-time underwater modeling tool used in scientific outreach, classroom teaching, and simulation environments.</li>
+	        <li style="margin-left:2em">Mentored a team of undergraduate interns, supporting both their technical growth and contributions to platform features.</li>
+	      </ul>
+	    </div>
+	
+	    <div data-date="June 2024 - August 2024" class="fadescroll">
+	      <h3>HF Designworks - FortiFly - ThayerMahan</h3>
+	      <h4>Software Engineer Intern - C#, Python</h4>
+	      <ul>
+	        <li>Continued development on the simulator platform built alongside ThayerMahan, supporting pilot training and AI interaction scenarios.</li>
+	        <li style="margin-left:2em">Upgraded the entire simulation environment from Unreal Engine 4 to Unreal Engine 5, unlocking improved lighting, performance, and development flexibility across their research and demo use cases.</li>
+	        <li>Developed an eye-tracking system to log and visualize user gaze in screenspace as a real-time heatmap, aiding UX research and usability analysis.</li>
+	      </ul>
+	    </div>
+	
+	    <div data-date="September 2023 - May 2024" class="fadescroll">
+	      <h3>Ocean Exploration Trust - NOAA OECI</h3>
+	      <h4>Software Engineer Intern - Python, C++</h4>
+	      <ul>
+	        <li>Contributed to the Realtime Underwater Modeling and Immersion (RUMI) project, focused on seafloor simulation using photogrammetry.</li>
+	        <li style="margin-left:2em">Work on this project was showcased at SIGGRAPH 2024 for bridging underutilized domains across ocean science and simulation.</li>
+	        <li>Designed software systems robust enough to be deployed at sea, in classrooms, and for interactive museum-style demos.</li>
+	      </ul>
+	    </div>
+	
+	    <div data-date="June 2023 - August 2023" class="fadescroll">
+	      <h3>ThayerMahan</h3>
+	      <h4>Simulation Intern - C++, Unreal Engine</h4>
+	      <ul>
+	        <li>Improved a naval pilot AI simulator by implementing A*-based dynamic routing to simulate real-world traffic and mission variability.</li>
+	        <li style="margin-left:2em">Collaborated directly with NAVAIR and FortiFly teams to create a more adaptive and realistic training experience.</li>
+	      </ul>
+	    </div>
+	
+	    <div data-date="November 2022 - May 2023" class="fadescroll">
+	      <h3>NOAA Ocean Exploration Cooperative Institute</h3>
+	      <h4>Software Engineer Intern - Python, Keras, PHP, JavaScript</h4>
+	      <ul>
+	        <li>Accelerated deep-sea video highlight generation using parallel processing and batching, resulting in an 80% reduction in runtime.</li>
+	        <li style="margin-left:2em">Helped optimize ROVIA, an AI tool that identifies moments of interest in ocean exploration video footage.</li>
+	        <li>Created URI Dynamic Metrics, a Google Sheets-powered WordPress plugin originally built for OECI and later adopted campus-wide.</li>
+	      </ul>
+	    </div>
+	
+	  </div>
+</div>
+
 
     <div class="spacer lightdark"></div>
 
     <div id="education">
-        <h2 class="heading">Education</h2>
-        <div class="education-block fadescroll">
-            <h3>University of Rhode Island</h3>
-            <h4>Computer Science BS - Spring 2026</h4>
-        </div>
-        <div class="education-block fadescroll">
-            <h3>Community College of Rhode Island</h3>
-            <h4>Computer Science AS - Joint Admissions - Spring 2024</h4>
-            <!--<ul>
-                <li>Deans List - Fall 2022, Spring 2023</li>
-            </ul>-->
-        </div>
-    </div>
+	  <h2 class="heading">Education</h2>
+	
+	  <div class="education-block fadescroll">
+	    <h3>University of Rhode Island</h3>
+	    <h4>B.S. Computer Science, Minor in Mathematics – Spring 2026</h4>
+	    <ul>
+	      <li>GPA: 3.94 / 4.0</li>
+	      <li>Relevant Coursework: C++, Java, Object-Oriented Programming, Data Science, Operating Systems, Networking, Combinatorics, Linear Algebra</li>
+	    </ul>
+	  </div>
+	
+	  <div class="education-block fadescroll">
+	    <h3>Community College of Rhode Island</h3>
+	    <h4>A.S. Computer Science – Joint Admissions Program – Spring 2024</h4>
+	  </div>
+	</div>
+
 
     <div class="spacer darklight"></div>
     
